# BoothHunter

./: AGENTS.md  RELEASE_NOTES_v0.3.1.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: publish.yml
docs/: RELEASE_v0.3.0.md  USER_GUIDE.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: database.rs  error.rs  lib.rs
src-tauri/src/commands/: collections.rs  db.rs  mod.rs  stats.rs  translation.rs  updater.rs
src/components/common/: ErrorBoundary.tsx  LanguageSelector.tsx  Pagination.tsx  Toast.tsx  UpdateToast.tsx
src/components/favorites/: AddToCollectionMenu.tsx  CollectionSidebar.tsx  FavoriteButton.tsx  FavoritesList.tsx  TagEditor.tsx
src/components/layout/: AppLayout.tsx  BottomTabBar.tsx  CategorySheet.tsx  Sidebar.tsx
src/components/search/: AvatarQuickFilter.tsx  FilterPanel.tsx  ItemCard.tsx  SearchBar.tsx  SearchResults.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  tooltip.tsx
src/hooks/: useCategoryNavigation.ts  useCollections.ts  useFavorites.ts  usePopularAvatars.ts  useSearch.ts  useStatistics.ts  useTranslation.ts
src/lib/: SearchContext.tsx  ToastContext.tsx  booth-api.ts  booth-parser.ts  constants.ts  hangul-katakana.test.ts  hangul-katakana.ts  korean-dict.ts  popular-avatars.ts  search-suggestions.ts  types.ts
src/pages/: FavoritesPage.tsx  ItemDetailPage.tsx  SearchPage.tsx  StatsPage.tsx
src/test/: setup.ts
(+4 files in other folders)
